[project]
name = "deep-learning-system-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hls4ml>=1.2.0",
    "ipykernel>=7.1.0",
    "onnxscript>=0.5.6",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "onnx==1.17.0",
    "qonnx>=0.4.0",
]

[tool.ruff]
lint.extend-select=["I"]

